--- a/pom.xml
+++ b/pom.xml
@@ -223,5 +223,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <github.global.server>github</github.global.server>
   </properties>
 </project>
